--- a/top/about/index.html
+++ b/top/about/index.html
@@ -217,11 +217,12 @@
 </ul>
 
                 <div id="gitalk-container"></div>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
-    <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+    <link rel="stylesheet" href="/css/gitalk.css">
+    <script src="/js/gitalk.min.js"></script>
     <script type="text/javascript">
       var gitalk = new Gitalk({
         id: '0001-01-01 00:00:00 \x2b0000 UTC',
+        title: '',
         clientID: '7cdb37937dd968256180',
         clientSecret: 'af48893cc00d928858dfd2ad678c1878a1c68d1c',
         repo: 'goldenspider.github.io',
